--- a/src/optimize/throw_pen/throw_pen_opt.ipynb
+++ b/src/optimize/throw_pen/throw_pen_opt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -19,6 +19,10 @@
     "from scipy.interpolate import RegularGridInterpolator\n",
     "import copy\n",
     "import time\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.path.dirname(os.getcwd()))))\n",
     "import opt_utils\n",
     "import importlib\n",
     "import trans_utils as T\n",
