--- a/src/optimize/hit_apple/hit_apple_opt.ipynb
+++ b/src/optimize/hit_apple/hit_apple_opt.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,9 @@
     }
    ],
    "source": [
+    "# Final EEF Pose in world frame\n",
     "final_pose_homo = T.pose2mat([gradient_sol[:3], T.euler2quat(gradient_sol[3:6])])\n",
+    "# Convert movable keypoints from eef frame back to world frame: final keypoints position in world frame\n",
     "final_keypoints = opt_utils.transform_keypoints(final_pose_homo, keypoints_ee, keypoint_movable_mask)\n",
     "final_hammer_head = final_keypoints[5]\n",
     "final_hammer_handle = final_keypoints[3]\n",
